--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -1,42 +1,43 @@
 .row-fluid
   .span3
-    %h2 Hello
+    %h2 THE INBOX
 
-%table.side_menu
-  %tr
-    %td
-  %tr
-    %td Inbox
-  %tr
-    %td Gmail
-  %tr
-    %td Facebook
-  %tr
-    %td Twitter
-
-%table.main
-  %tr.header
-    %th Sender
-    %th Message
-    %th Date/Time
-  %tr
-    %td mark
-    %td sup brah
-    %td 11:30
-  %tr
-    %td bill
-    %td yo dude
-    %td 11:30
-  %tr
-    %td andt
-    %td i'm so fuckin' cool!!!
-    %td 11:20
-  %tr
-    %td bill
-    %td yo dude
-    %td 11:30
-  %tr
-    %td andt
-    %td i'm so fuckin' cool!!!
-    %td 11:20
+.row-fluid
+  .span12
+    .span2
+      %table.side_menu
+        %tr
+          %td Inbox
+        %tr
+          %td Gmail
+        %tr
+          %td Facebook
+        %tr
+          %td Twitter
+    .span10
+      %table.main
+        %tr.header
+          %th Sender
+          %th Message
+          %th Date/Time
+        %tr
+          %td mark
+          %td sup brah
+          %td 11:30
+        %tr
+          %td bill
+          %td yo dude
+          %td 11:30
+        %tr
+          %td andt
+          %td i'm so fuckin' cool!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+          %td 11:20
+        %tr
+          %td bill
+          %td yo dude
+          %td 11:30
+        %tr
+          %td andt
+          %td i'm so fuckin' cool!!!
+          %td 11:20
 
