expand and contract inbox messages mostly implemented...minor adjustments needed

--- a/app/assets/stylesheets/hacker_news.css
+++ b/app/assets/stylesheets/hacker_news.css
@@ -1,6 +1,3 @@
-
-
-
 table[Attributes Style] {
   border-top-width: 0px;
   border-right-width: 0px;
@@ -73,6 +70,7 @@ table.main {
 }
 
 h2 {
+  text-align: center;
   border: 2px solid;
   margin-left: 10px;
 }
