--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -22,22 +22,35 @@
           %th Date/Time
         %tr
           %td mark
-          %td sup brah
+          %td
+            %p.message Cartman plays a prank on Butters by disguising himself as a robot named "The A.W.E.S.O.M.-O 4000" and by putting himself in a crate on Butters's doorstep "from Japan". Cartman is planning to befriend the gullible Butters and discover his embarrassing secrets, so he can blackmail him and/or embarrass him in school. Though Butters acknowledges that his birthday is "not until September 11", he enthusiastically accepts this deception and reveals several personal secrets. However, just as Cartman is about to reveal his identity, Butters reveals that he knows one of Cartman's secrets - he has a videotape of Cartman doing a Britney Spears dance routine to a life-sized cutout of Justin Timberlake while dressed as her and actually makes out with the cut-out, which he plans to show to his classmates the next time Cartman plays a prank on him, which Cartman is already doing.
+          %p.more
+            //<a href='#' class='more'>read more</a>
+            //<a href='#' class='less'>read less</a>
           %td 11:30
         %tr
           %td bill
-          %td yo dude
+          %td
+            %p.message Cartman plays a prank on Butters by disguising himself as a robot named "The A.W.E.S.O.M.-O 4000" and by putting himself in a crate on Butters's doorstep "from Japan". Cartman is planning to befriend the gullible Butters and discover his embarrassing secrets, so he can blackmail him and/or embarrass him in school. Though Butters acknowledges that his birthday is "not until September 11", he enthusiastically accepts this deception and reveals several personal secrets. However, just as Cartman is about to reveal his identity, Butters reveals that he knows one of Cartman's secrets - he has a videotape of Cartman doing a Britney Spears dance routine to a life-sized cutout of Justin Timberlake while dressed as her and actually makes out with the cut-out, which he plans to show to his classmates the next time Cartman plays a prank on him, which Cartman is already doing.
           %td 11:30
         %tr
           %td andt
-          %td i'm so fuckin' cool!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+          %td
+            %p.message Cartman plays a prank on Butters by disguising himself as a robot named "The A.W.E.S.O.M.-O 4000" and by putting himself in a crate on Butters's doorstep "from Japan". Cartman is planning to befriend the gullible Butters and discover his embarrassing secrets, so he can blackmail him and/or embarrass him in school. Though Butters acknowledges that his birthday is "not until September 11", he enthusiastically accepts this deception and reveals several personal secrets. However, just as Cartman is about to reveal his identity, Butters reveals that he knows one of Cartman's secrets - he has a videotape of Cartman doing a Britney Spears dance routine to a life-sized cutout of Justin Timberlake while dressed as her and actually makes out with the cut-out, which he plans to show to his classmates the next time Cartman plays a prank on him, which Cartman is already doing.!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
           %td 11:20
         %tr
           %td bill
-          %td yo dude
+          %td
+            %p.message Cartman plays a prank on Butters by disguising himself as a robot named "The A.W.E.S.O.M.-O 4000" and by putting himself in a crate on Butters's doorstep "from Japan". Cartman is planning to befriend the gullible Butters and discover his embarrassing secrets, so he can blackmail him and/or embarrass him in school. Though Butters acknowledges that his birthday is "not until September 11", he enthusiastically accepts this deception and reveals several personal secrets. However, just as Cartman is about to reveal his identity, Butters reveals that he knows one of Cartman's secrets - he has a videotape of Cartman doing a Britney Spears dance routine to a life-sized cutout of Justin Timberlake while dressed as her and actually makes out with the cut-out, which he plans to show to his classmates the next time Cartman plays a prank on him, which Cartman is already doing.
           %td 11:30
         %tr
           %td andt
-          %td i'm so fuckin' cool!!!
+          %td
+            %p.message Cartman plays a prank on Butters by disguising himself as a robot named "The A.W.E.S.O.M.-O 4000" and by putting himself in a crate on Butters's doorstep "from Japan". Cartman is planning to befriend the gullible Butters and discover his embarrassing secrets, so he can blackmail him and/or embarrass him in school. Though Butters acknowledges that his birthday is "not until September 11", he enthusiastically accepts this deception and reveals several personal secrets. However, just as Cartman is about to reveal his identity, Butters reveals that he knows one of Cartman's secrets - he has a videotape of Cartman doing a Britney Spears dance routine to a life-sized cutout of Justin Timberlake while dressed as her and actually makes out with the cut-out, which he plans to show to his classmates the next time Cartman plays a prank on him, which Cartman is already doing.
+          %td 11:20
+        %tr
+          %td thomas
+          %td
+            %p.message no need to shorten!!!
           %td 11:20
 
