Twitter Home feed is now pulled into the home page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,12 @@
  *= require_self
  *= require_tree .
  */
+
+.twitter-img img {
+    position: relative;
+    float: left;
+}
+
+.container {
+    float: left;
+}
