twitter authentication not working

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,6 +5,12 @@
      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 
+- if current_user
+  Signed in as #{current_user.name}!
+  = link_to "Sign out", signout_path
+- else
+  = link_to "Sign in with Twitter", "/auth/twitter"
+
 .row-fluid
   .span3 
     %h2 THE INBOX
