--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,10 +6,16 @@
   })();
 
 .row-fluid
-  .span3 
+  .span3
     %h2 THE INBOX
   .span3#signinButton#login
     %span.g-signin{"data-callback" => "signinCallback", "data-clientid" => "CLIENT_ID", "data-cookiepolicy" => "single_host_origin", "data-requestvisibleactions" => "http://schemas.google.com/AddActivity", "data-scope" => "https://www.googleapis.com/auth/plus.login"}
+  .span3
+    - if current_user
+      Signed in as #{current_user.name}!
+      = link_to "Sign out", signout_path
+    - else
+      = link_to "Sign in with Twitter", "/auth/twitter"
 
 / = link_to "Home", 'root_path', :class => 'brand'
 / %ul.nav
