--- a/app/views/platform/splash.html.haml
+++ b/app/views/platform/splash.html.haml
@@ -1,4 +1,6 @@
 !!!
+
+
 %html
   %head
     %meta{:charset => "utf-8"}
@@ -11,17 +13,7 @@
     = csrf_meta_tags
     = yield(:head)
   %body
-    #main{:role => "main"}
-      .button-right
-        %span.g-signin{"data-callback" => "signinCallback", "data-clientid" => "CLIENT_ID", "data-cookiepolicy" => "single_host_origin", "data-requestvisibleactions" => "http://schemas.google.com/AddActivity", "data-scope" => "https://www.googleapis.com/auth/plus.login"}
-      .splash-img
-        = image_tag 'onewall2.jpg'
+    = link_to "Sign in with Google", "/auth/google_oauth2"
+    .splash-img
+      = image_tag 'onewall2.jpg'
 
-
-
-:javascript
-  (function() {
-     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-     po.src = 'https://apis.google.com/js/client:plusone.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
