--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,7 +4,7 @@
     %h2 THE INBOX
   .span3
     - if current_user
-      Signed in as #{current_user.name}!
+      Signed in as #{current_user.email}!
       = link_to "Sign out", signout_path
     - else
       = link_to "Sign in with Twitter", "/auth/twitter"
