Solved persistant user problem. If a user signs in with google, it will auto sign him into Twitter if he has authorized Twitter before. We may encounter problems if tokens start expiring.

--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -14,14 +14,14 @@
         %tr
           %td Twitter
 
-  -if @timeline
+  -if @twitter_timeline
     .span10
       %table.main
         %tr.header
           %th Sender
           %th Message
           %th Date/Time
-        - @timeline.each do |tweet|
+        - @twitter_timeline.each do |tweet|
           %tr
             %td
               = tweet[:user][:screen_name]
