created email table and migration

--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -27,6 +27,8 @@
 
             %td
               = email.text_part.body
+            %td
+              = email.inspect
 
   -if @twitter_timeline
     .span10
