emails now saving, displaying correctly, and brings in unread emails

--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -1,5 +1,4 @@
 
-
 .row-fluid
   .span3
 
@@ -26,7 +25,7 @@
               = email.subject
 
             %td
-              = email.text_part.body
+              = email.body
             %td
               = email.from
             %td
