--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -48,3 +48,7 @@
               = auto_link(tweet[:text], :html => { :target => '_blank' })
             %td
               = tweet[:created_at]
+
+
+
+- paginate @emails
