--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -3,7 +3,7 @@
 
 .row-fluid
   .span12
-    .span2
+    .span1
       %table.side_menu
         %tr
           %td Inbox
@@ -14,20 +14,20 @@
         %tr
           %td Twitter
 
-  -if @twitter_timeline
-    .span10
-      %table.main
-        %tr.header
-          %th Sender
-          %th Message
-          %th Date/Time
-        - @twitter_timeline.each do |tweet|
-          %tr
-            %td
-              = tweet[:user][:screen_name]
-              .br
-              = image_tag tweet[:user][:profile_image_url_https]
-            %td
-              = auto_link(tweet[:text], :html => { :target => '_blank' })
-            %td
-              = tweet[:created_at]
+    -if @twitter_timeline
+      .span11
+        %table.main
+          %tr.header
+            %th Sender
+            %th Message
+            %th Date/Time
+          - @twitter_timeline.each do |tweet|
+            %tr
+              %td
+                = tweet.screen_name
+                .br
+                = image_tag tweet.profile_image_url
+              %td
+                = auto_link(tweet.text, :html => { :target => '_blank' })
+              %td
+                = tweet.received_at
