minor changes to front end index page

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,7 +1,7 @@
 
 .row-fluid
   .span3
-    %h2 THE INBOX
+    %h2 OneWall
   .span5
     - if current_user
       Signed in as #{current_user.email}!
