--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -31,14 +31,14 @@
             %td
               = email.received
 
-  -if @twitter_timeline
+  -if @timeline
     .span10
       %table.main
         %tr.header
           %th Sender
           %th Message
           %th Date/Time
-        - @twitter_timeline.each do |tweet|
+        - @timeline.each do |tweet|
           %tr
             %td
               = tweet[:user][:screen_name] 
@@ -51,4 +51,4 @@
 
 
 
-- paginate @emails
+- paginate @timeline if @timeline != nil
