--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -7,31 +7,34 @@
     .span1
       %table.side_menu
         %tr
-          %td Inbox
+          %td All
         %tr
           %td Gmail
-        %tr
-          %td Facebook
         %tr
           %td Twitter
     - if @emails
       .span10
         %table.main
-          %tr.header
-            %th Sender
-            %th Subject
-            %th Body
-            %th Date/Time
-          - @emails.each do |email|
-            %tr
-              %td
-                = email.from
-              %td
-                = email.subject
-              %td
-                = email.body
-              %td
-                = email.received
+          .row-fluid
+            %tr.header
+              %th Gmail
+            - @emails.each do |email|
+              %tr
+                %td
+                  .span1
+                    = image_tag 'http://placehold.it/48/48'
+                  .text-left.span3
+                    = email[:from]
+                  .span5
+                  .text-right.span3
+                    = email[:received]
+                  .span11
+                    .text-left
+                      = email[:subject]
+                      .br
+                      = auto_link(email[:body], :html => { :target => '_blank' })
+
+
 
     -if @twitter_timeline
       .span10
