added body and sender classes to index so that the screen names are bold and the links in the body break+wrap instead of continuing outside of the box

--- a/app/assets/stylesheets/hacker_news.css
+++ b/app/assets/stylesheets/hacker_news.css
@@ -80,3 +80,12 @@ h2 {
   margin-left: 10px;
   text-align: center;
 }
+
+.body {
+  word-wrap: break-word;
+  width: 85%;
+}
+
+.sender {
+  font-weight: bold;
+}
