--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -1,4 +1,3 @@
-
 .row-fluid
   .span3
 
@@ -25,13 +24,13 @@
                   %td
                     .span1
                       = image_tag 'http://placehold.it/48/48'
-                    .text-left.span3
+                    .sender.text-left.span3
                       = message.from
                     .span5
                     .text-right.span3
                       = Feed.format_time(message.received_at)
                     .span11
-                      .text-left.message
+                      .body.text-left.message
                         = message.subject
                         .br
                         = auto_link(message.body, :html => { :target => '_blank' })
@@ -40,13 +39,13 @@
                   %td
                     .span1
                       = image_tag message.profile_image_url
-                    .text-left.span3
+                    .sender.text-left.span3
                       = "@#{message.screen_name}"
                     .span5
                     .text-right.span3
                       = Feed.format_time(message.received_at)
                     .span11
-                      .text-left
+                      .body.text-left
                         = auto_link(message.text, :html => { :target => '_blank' })
 
       .text-center.span12
