--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,9 @@
 }
 
 .content {
+  background-image:url('wall.png');
+  background-attachment: fixed;
+  background-repeat:no-repeat;
   background-color: #eee;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
