--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,12 @@
     float: left;
 }
 
+body.splash {
+  background-image: url('onewall2.jpg');
+  background-size: 100%;
+  background-repeat:no-repeat;
+}
+
 .content {
   background-image:url('wall.png');
   background-attachment: fixed;
@@ -29,10 +35,6 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
-}
-
-.splash-img img {
-
 }
 
 .button-right {
