--- a/app/views/platform/index.html.haml
+++ b/app/views/platform/index.html.haml
@@ -22,7 +22,7 @@
               - if message.kind_of?(Email)
                 %tr
                   %td
-                    .span1
+                    .image.span1
                       = image_tag 'http://placehold.it/48/48'
                     .sender.text-left.span3
                       = message.from
@@ -37,7 +37,7 @@
               - else
                 %tr
                   %td
-                    .span1
+                    .image.span1
                       = image_tag message.profile_image_url
                     .sender.text-left.span3
                       = "@#{message.screen_name}"
