--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,3 +50,12 @@ body.splash {
   margin-top: 20px;
 }
 
+.top-bar {
+
+}
+
+h2.navigation {
+  -webkit-box-shadow: 0 8px 6px -6px black;
+     -moz-box-shadow: 0 8px 6px -6px black;
+          box-shadow: 0 8px 6px -6px black;
+ }
