--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,7 +1,7 @@
 
-.row-fluid
+.row-fluid.top-bar
   .span3
-    %h2 OneWall
+    %h2.navigation OneWall
   - if current_user
     .text-left.span4.twitter-login
       = link_to image_tag('twitter_login.png'), '/auth/twitter'
