--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,19 +22,10 @@ body.splash {
   background-repeat:no-repeat;
 }
 
-.content {
+.the-wall {
   background-image:url('wall.png');
   background-attachment: fixed;
   background-repeat:no-repeat;
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
 .button-right {
@@ -49,9 +40,6 @@ body.splash {
 .signout {
   margin-top: 20px;
   text-align: right;
-}
-
-.top-bar {
 }
 
 h2.navigation {
