--- a/app/assets/stylesheets/hacker_news.css
+++ b/app/assets/stylesheets/hacker_news.css
@@ -66,24 +66,11 @@ element.style {
 
 td.hover {
   background-color: rgba(199, 195, 100, 0.5);
-
-}
-
-table.side_menu {
-  float: left;
-  margin: 10px;
-  border-collapse: separate;
-  border-spacing: 2px;
-  border: 2px solid gray;
-  border-radius: 2px;
-  line-height: 15px;
-  padding: 5px;
 }
 
 table.main {
-  float: left;
-  margin: 10px;
-
+  horizontal-align: middle;
+  margin-top: 30px;
 }
 
 h2 {
