--- a/app/assets/stylesheets/hacker_news.css
+++ b/app/assets/stylesheets/hacker_news.css
@@ -3,6 +3,11 @@
   float: right;
 }
 
+.image {
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
 table[Attributes Style] {
   border-top-width: 0px;
   border-right-width: 0px;
@@ -12,6 +17,7 @@ table[Attributes Style] {
   width: 85%;
   background-color: rgb(246, 246, 239);
 }
+
 table {
   white-space: normal;
   line-height: normal;
@@ -78,7 +84,6 @@ h2 {
   text-align: center;
   border: 2px solid;
   margin-left: 10px;
-  text-align: center;
 }
 
 .body {
@@ -89,4 +94,17 @@ h2 {
 
 .sender {
   font-weight: bold;
+}
+
+.splash-title {
+  text-align: center;
+}
+
+.splash-message {
+  text-align: center;
+}
+
+.sign-in-button {
+  text-align: center;
+  padding-top: 10px;
 }
